force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/KimbleOne__ConfigurationDataObjectMap__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Configuration Data Imported Item</label>
    <nameField>
        <label>ObjectMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Data Imported Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>