force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/fields/KimbleOne__ConfigurationDataImport__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ConfigurationDataImport__c</fullName>
    <description>The Configuration Data Import that resulted in the row detailed in the Object Map table</description>
    <label>ConfigurationDataImport</label>
    <referenceTo>KimbleOne__ConfigurationDataImport__c</referenceTo>
    <relationshipName>ConfigurationDataObjectMaps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>