force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/fields/KimbleOne__Sequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Sequence__c</fullName>
    <description>represents the order of insertion in an import (reversed to determine the order to delete the rows)</description>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>