force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/fields/KimbleOne__SourceObjectId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SourceObjectId__c</fullName>
    <description>Id of the object in the source organisation</description>
    <label>SourceObjectId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>