force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/fields/KimbleOne__TargetName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetName__c</fullName>
    <description>The &quot;Name&quot; field from the source object record (as distinct from the ObjectName which is the name of the table (object) itself</description>
    <label>TargetName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>