force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/fields/KimbleOne__TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetObjectId__c</fullName>
    <description>Resultant Id of the newly created record in the target org</description>
    <label>TargetObjectId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>