force-app/main/default/objects/KimbleOne__ConfigurationDataObjectMap__c/fields/KimbleOne__TargetObjectType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetObjectType__c</fullName>
    <description>Object Type that the target Id relates to</description>
    <label>TargetObjectType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>